# nakai_simulation

./: .gitignore  README.md
src/my_robot_bringup/: package.xml
src/my_robot_bringup/launch/: my_robot_gazebo.launch.xml  robot.launch.py
src/my_robot_bringup/rviz/: urdf_config.rviz
src/my_robot_bringup/worlds/: cliff.world  dave_ocean.world  sea.world  side_ship.world  vessel.world  vessel_sim.world
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/launch/: display.launch.py
src/my_robot_description/materials/scripts/: my_texture.material
src/my_robot_description/models/textured_box/: model.config  model.sdf
src/my_robot_description/rviz/: urdf_config.rviz
src/my_robot_description/urdf/: camera.xacro  common_properties.xacro  kinect.xacro  my_robot.urdf.xacro  plecos_components.urdf  plecos_description.urdf  plecos_properties.urdf  robot_base.xacro  robot_base_gazebo.xacro  robot_sensors.xacro  vessel.urdf.xacro  vessel_gazebo.xacro
src/my_robot_simulation/: CMakeLists.txt  package.xml
src/my_robot_simulation/src/: bug2.cpp  bug2_copy.cpp  force_applier.cpp  shape_detection_node.cpp
src/object_detection/: package.xml  setup.py
src/object_detection/object_detection/: depth_camera_node.py  detect_corners.py  hole_detection_node.py  mapping_node.py  object_detection.py  slime_detection.py
src/obstacle_avoidance/: package.xml  setup.py
src/obstacle_avoidance/obstacle_avoidance/: horiz_detector.py  obstacle_override.py
